@@ -33,7 +33,7 @@ task dist(type: Jar) {
     from { configurations.compile.collect { zipTree(it) } }
 
     manifest {
-        attributes 'Main-Class': project.mainClassName
+        attributes ('Main-Class': project.mainClassName, 'SplashScreen-Image' : "${project.projectDir}/assets/data/icons/ao.png")
     }
 }
 
@@ -41,101 +41,7 @@ dist.dependsOn classes
 run.dependsOn classes
 
 def releasesDir() { "${projectDir}/build/releases/" }
-def zipDir() { "${projectDir}/build/zip/" }
-static def packingDir() { "packing/" }
-
-static def switchConfig(platform) {
-    def config
-    switch (platform) {
-        case "windows32":
-            config = packingDir().concat("build-windows-32.json")
-            break
-        case "windows64":
-            config = packingDir().concat("build-windows-64.json")
-            break
-        case "mac":
-            config = packingDir().concat("build-mac.json")
-            break
-        case "linux64":
-            config = packingDir().concat("build-linux.json")
-            break
-    }
-    config
-}
-
-def packArgs(platform) {
-    [
-            "${projectDir}/packing/jdks/packr.jar",
-            "--platform", platform,
-            switchConfig(platform)
-    ]
-}
-
-task packWindows32(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("windows32")
-}
-
-task packWindows64(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("windows64")
-}
-
-task packMac(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("mac")
-}
-
-task packLinux64(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("linux64")
-}
-
-task pack {
-    dependsOn 'dist'
-    dependsOn 'downloadBinaries'
-    dependsOn 'packWindows32'
-    dependsOn 'packWindows64'
-    dependsOn 'packMac'
-    dependsOn 'packLinux64'
-    tasks.findByName('dist').mustRunAfter('downloadBinaries')
-    tasks.findByName('packWindows32').mustRunAfter('dist')
-    tasks.findByName('packWindows64').mustRunAfter 'packWindows32'
-    tasks.findByName('packMac').mustRunAfter 'packWindows64'
-    tasks.findByName('packLinux64').mustRunAfter 'packMac'
-}
-
-task zipAll() {
-    file(releasesDir()).eachDir() { folder ->
-        def taskName = "zip${folder.name.capitalize()}"
-        task "$taskName"(type: Zip) {
-            from folder
-            archiveFile.set(project.file(zipDir() + folder.name + ".zip"))
-        }
-        zipAll.dependsOn taskName
-    }
-}
-
-task downloadBinaries() {
-    def binJson = file(packingDir().concat("binaries.json"))
-    def json = new JsonSlurper().parseText(binJson.text)
-
-    download {
-        src([json.packr, json.windows32, json.windows64, json.linux64, json.mac])
-        dest packingDir().concat("jdks")
-        overwrite false
-    }
-}
-
-task release() {
-    dependsOn 'dist'
-    dependsOn 'pack'
-    dependsOn 'zipAll'
-    dependsOn 'githubRelease'
-    tasks.findByName('pack').mustRunAfter('dist')
-    tasks.findByName("zipAll").mustRunAfter('pack')
-    tasks.findByName("githubRelease").mustRunAfter('zipAll')
-}
+def packingDir() { "${projectDir}/jpackage/" }
 
 githubRelease {
     //token project.property('github.token')
@@ -148,19 +54,122 @@ githubRelease {
     apiEndpoint "https://api.github.com"
 }
 
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher{
-        name = 'Finisterra Argentum Online Client'
-        if (osName().contains('mac')) {
-		jvmArgs += '-XstartOnFirstThread'
-	}
+task downloadBinaries(type: Download) {
+
+    if (osName().contains('windows')) {
+	src "https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_windows-x64_bin.zip"
+    
+    } else if (osName().contains('linux')) {
+            src "https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_linux-x64_bin.tar.gz"
+
+    } else if (osName().contains('mac')) {
+            src "https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_osx-x64_bin.tar.gz"
+    
     }
 
-    jpackage {
-        jpackageHome = "${projectDir}/packing/jdks/jpack/bin"
-        outputDir = releasesDir()
-        imageName = 'FinisterraAO'
-        skipInstaller = true
+    dest packingDir().concat("zip")
+    overwrite false
+}
+
+task uncompressBinaries(dependsOn: downloadBinaries, type: Copy) {
+
+    if (osName().contains('windows')) {
+        from zipTree(file(packingDir().concat("zip/openjdk-14-jpackage+8_windows-x64_bin.zip")))
+    
+    } else if (osName().contains('linux')) {
+	from tarTree(file(packingDir().concat("zip/openjdk-14-jpackage+8_linux-x64_bin.tar.gz")))
+    
+    } else if (osName().contains('mac')) {
+	from tarTree(file(packingDir().concat("zip/openjdk-14-jpackage+8_osx-x64_bin.tar.gz")))
     }
+	    
+    into packingDir()
+
+}
+
+// creates application bundle (executable + runtime)
+task jpackageStart(type: Exec, dependsOn: dist) {
+    workingDir project.projectDir
+    def commands = [
+        "${project.projectDir}/jpackage/jdk-14/bin/jpackage",
+        '--output', "${buildDir}/releases",
+        '--input', "${buildDir}/libs",
+        '--name', project.appName,
+        '--main-class', project.mainClassName,
+        '--main-jar', "desktop-${project.version}.jar"
+    ]
+    
+    if (osName().contains('windows')) {
+        commands << '--icon'
+        commands << "${project.projectDir}/assets/data/icons/ao.ico"
+        commands << '--java-options'
+        commands << "-splash:ao.ico"
+    } else if (osName().contains('linux')) {
+        commands << '--icon'
+        commands << "${project.projectDir}/assets/data/icons/ao.png"
+        commands << '--java-options'
+        commands << "-splash:ao.png"
+    } else if (osName().contains('mac')) {
+        commands << '--icon'
+        commands << "${project.projectDir}/assets/data/icons/ao.icns"
+        commands << '--java-options'
+        commands << "-XstartOnFirstThread"
+    }
+    
+    commandLine = commands
+}
+
+// removes bloated runtime created by jpackage
+task jpackageCleanRuntime(dependsOn: jpackageStart) {
+    doLast() {
+        File runtimeFile = new File("${buildDir}/distribution/${project.appName}/runtime")
+        if (osName().contains('mac')) {
+            runtimeFile = new File("${buildDir}/distribution/${project.appName}.app/contents/plugins/Java.runtime/Contents/Home")
+        }
+        runtimeFile.deleteDir()
+        delete {
+            delete fileTree("${buildDir}/distribution/${project.appName}").matching {
+                include "api*.dll"
+            }
+        }
+        System.out.println("deleting bloated runtime in " + runtimeFile)
+    }
+}
+
+// creates a replacement runtime via jlink command (much smaller than jpackager)
+task jpackageAppBundle(type: Exec, dependsOn: [jpackageCleanRuntime]) {
+    String runtimePath = "${buildDir}/distribution/${project.appName}/runtime"
+    if (osName().contains('mac')) {
+        runtimePath = "${buildDir}/distribution/${project.appName}.app/contents/plugins/Java.runtime/Contents/Home"
+    }
+
+    workingDir project.projectDir
+    commandLine = [
+        "${project.projectDir}/jpackage/jdk-14/bin/jlink",
+        '-p', "${project.projectDir}/jpackage/jmods",
+        '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+        '--strip-debug',
+        '--no-header-files',
+        '--no-man-pages',
+        '--strip-native-commands',
+        "--vm=server",
+        "--compress=2",
+        '--output', runtimePath
+    ]
+    
+    doLast{
+        System.out.println("Application '${project.appName}' packaged.")
+        System.out.println(" -> location: ${buildDir}/distribution/${project.appName}/")
+    }
+}
+
+githubRelease {
+    //token project.property('github.token')
+    owner "ao-libre"
+    repo "ao-java"
+    targetCommitish "master"
+    draft false
+    prerelease true
+    releaseAssets project.file('build/zip/').listFiles()
+    apiEndpoint "https://api.github.com"
 }
